--- a/task1.html
+++ b/task1.html
@@ -34,7 +34,7 @@
             </div>
             <div class="input-block">
                 <label for="imgBorderColor">Колір рамки</label>
-                <input type="text" name="borderColor" id="imgBorderColor" />
+                <input type="color" name="borderColor" id="imgBorderColor" />
             </div>
             <h2>Додатково</h2>
             <div class="input-block">
