--- a/task2.html
+++ b/task2.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div id="content-block">
-        <div id="content">
+        <div class="content">
             <h1>Кількість ДТП</h1>
             <table>
                 <thead>
@@ -32,6 +32,16 @@
                         <td><button>Видалити</button></td>
                         <td contenteditable>2019 рік</td>
                         <td contenteditable>5456</td>
+                    </tr>
+                    <tr>
+                        <td><button>Видалити</button></td>
+                        <td contenteditable>2021 рік</td>
+                        <td contenteditable>3156</td>
+                    </tr>
+                    <tr>
+                        <td><button>Видалити</button></td>
+                        <td contenteditable>2022 рік</td>
+                        <td contenteditable>6456</td>
                     </tr>
                 </tbody>
                 <tfoot>
@@ -55,12 +65,10 @@
                     <button type="submit">Додати</button>
                 </div>
             </form>
-            <h1>Діаграма</h1>
-            <div>
-                <div id="diagramBlock">
+        </div>
+        <h1>Діаграма</h1>
+        <div id="diagramBlock">
 
-                </div>
-            </div>
         </div>
     </div>
 </body>
